...
            <point key="canvasLocation" x="75" y="0.0"/>
        </scene>
        <!--Window Controller-->
        <scene sceneID="R2V-B0-nI4">
            <objects>
                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
                    <window key="window" identifier="main-window" title="MVVM Sample" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <rect key="contentRect" x="196" y="240" width="320" height="130"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                        <connections>
                            <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                        </connections>
...
            <objects>
                <viewController id="XfG-lQ-9wD" customClass="SampleViewController" customModule="MVVM_Sample_Combine_AppKit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="m2S-Jp-Qdl">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <textField identifier="text-field-id" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="g2d-bT-IuT">
                                <rect key="frame" x="20" y="89" width="280" height="21"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Yed-MU-Mqf">
                                    <font key="font" usesAppearanceFont="YES"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <textField identifier="text-field-password" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wku-r5-zZe">
                                <rect key="frame" x="20" y="52" width="280" height="21"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Bww-fU-xAe">
                                    <font key="font" usesAppearanceFont="YES"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <textField identifier="label-validation" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qXk-kD-gjj">
                                <rect key="frame" x="18" y="20" width="284" height="16"/>
                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Label" id="ZQP-JK-ado">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
...
